--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,17 @@
 .venv
+.env
+wandb
 __pycache__
 
+*.wav
 *.mp4
 *.ipynb
+
+
 temp/
 audio_wav/
-audio_mel/
+data_*
+*_data
+checkpoints/
+
 audio_color_mapping.csv
