--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,13 @@ __pycache__
 *.mp4
 *.ipynb
 
-
+old/
 temp/
 audio_wav*
 data_*
 *_data
+data/*
 checkpoints/
 
 audio_color_mapping.csv
-train_test_songs.json
+train_test_songs*
